[gd_scene load_steps=16 format=3 uid="uid://dp7moyr0vd76q"]

[ext_resource type="Texture2D" uid="uid://d3bdprxjpe7s3" path="res://BGS/3 Objects/Pumpkin_portal1.png" id="1_qxlnb"]
[ext_resource type="Script" path="res://Scenes/portal.gd" id="1_regtw"]
[ext_resource type="AudioStream" uid="uid://ck5i5jt8pgx0k" path="res://Music/Mout_Open.mp3" id="3_mmji1"]
[ext_resource type="AudioStream" uid="uid://4w74nx4wp85d" path="res://Music/Mout_Close.mp3" id="4_vwilt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v3wa2"]
atlas = ExtResource("1_qxlnb")
region = Rect2(384, 0, 128, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccc15"]
atlas = ExtResource("1_qxlnb")
region = Rect2(256, 0, 128, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrf0y"]
atlas = ExtResource("1_qxlnb")
region = Rect2(128, 0, 128, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueixt"]
atlas = ExtResource("1_qxlnb")
region = Rect2(0, 0, 128, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pverp"]
atlas = ExtResource("1_qxlnb")
region = Rect2(0, 0, 128, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tdku"]
atlas = ExtResource("1_qxlnb")
region = Rect2(0, 0, 128, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2imv6"]
atlas = ExtResource("1_qxlnb")
region = Rect2(128, 0, 128, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0dg4"]
atlas = ExtResource("1_qxlnb")
region = Rect2(256, 0, 128, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_txwqy"]
atlas = ExtResource("1_qxlnb")
region = Rect2(384, 0, 128, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_tlnme"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3wa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccc15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrf0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueixt")
}],
"loop": false,
"name": &"Close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pverp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tdku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2imv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0dg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txwqy")
}],
"loop": false,
"name": &"Open",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bk1i3"]
size = Vector2(357.75, 159)

[node name="Portal" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_regtw")

[node name="PortalOpen" type="AnimatedSprite2D" parent="."]
position = Vector2(-9.53674e-07, -1)
scale = Vector2(2.38818, 2.23438)
sprite_frames = SubResource("SpriteFrames_tlnme")
animation = &"Open"

[node name="ANIMATIONPLAY" type="CollisionShape2D" parent="."]
position = Vector2(-93.125, 29)
shape = SubResource("RectangleShape2D_bk1i3")

[node name="PortalDoor" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Teleport" type="CollisionPolygon2D" parent="PortalDoor"]
polygon = PackedVector2Array(4, -57, 4, 3, -12, 102, 31, 99, 44, -50)

[node name="MoutOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mmji1")

[node name="MoutClose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vwilt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="PortalDoor" to="." method="_on_portal_door_body_entered"]
